# Founders-UIUC-Exploration

./: .env.example  .gitignore  GETTING_STARTED.md  README.md  SETUP_GUIDE.md  TEAM_SETUP.md  outreach-run  outreach-run-web  pyproject.toml  requirements.txt
outreach/: __init__.py  __main__.py  browser_fetch.py  cli.py  contact_scrape.py  domain_guess.py  email_providers.py  enrich.py  ensure_env.py  env_loader.py  extract.py  founder_names.py  gemini_api.py  generate.py  google_export.py  html_emails.py  models.py  outlook_export.py  pattern_verify.py  pipeline.py  prompts.py  web.py
outreach/static/: index.html
scripts/: merge_env_from_save.py  test_email_finding.py
