[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "outreach-automation"
version = "0.1.0"
description = "Extract leads from a URL, enrich emails, generate outreach with Groq, export to Google Sheets/Docs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
outreach = "outreach.cli:main"
outreach-web = "outreach.web:run_web_server"

[tool.setuptools.packages.find]
where = ["."]
include = ["outreach*"]

[tool.setuptools.package-data]
outreach = ["static/*.html"]
